# LONGFORM-VIDEO-GENERATOR

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  INTEGRATION_SUMMARY.md  PRD.md  PROMPT_ENGINEERING_GUIDE.md  PROMPT_SYSTEM_README.md  QUICKSTART_TUTORIAL.md  README.md  pyproject.toml  tasks.md
projects/Video-test/: segments.json
projects/agentic_ai_example/: segments.json
projects/example_project/: segments.json
prompts/: 1_script_generator.md  2_segment_planner.md
scripts/: __init__.py  assemble_video.py  create_segment.py  generate_image.py  generate_voice.py  prompt_config.py  prompt_generator.py  prompt_library.py  utils.py  workflow.py
